@@ -1610,8 +1610,11 @@ class math_parse_s_ft2font_common:
         handler.clear()
 
         if self.output == 'SVG':
-            self.cache[cacheKey] = w, h, self.font_object.svg_glyphs
-            return w, h, self.font_object.svg_glyphs
+            # The empty list at the end is for lines
+            svg_elements = Bunch(svg_glyphs=self.font_object.svg_glyphs,
+                    svg_lines=[])
+            self.cache[cacheKey] = w, h, svg_elements
+            return w, h, 
         elif self.output == 'Agg':
             self.cache[cacheKey] = w, h, self.font_object.fonts.values()
             return w, h, self.font_object.fonts.values()
